# ROS2-based-Intelligent-Medicine-Pickup-System

./: .gitignore  .thought_logging.env.example  0421项目结构.md  20260512-接入前端情况说明.md  AI 开药助手 —— 团队项目说明文档 ver 3.0.md  API密钥安全指南.md  Makefile  README.md  tests-backend-baseline.txt  tests-integration-baseline.txt  tests-p1-baseline.txt  validate_restructure.py  团队通知.md  智能药品管理系统技术实施方案.md  组件1-categories表接口说明.md  组件1-第1-2周工作汇报.md  组件1-跨组件接口对照表.md  组件2:药品API.md  组件2药品API.md  组件3智能筛选系统.md
.claude/: settings.local.json
P1/: .env.example  DEEPSEEK_CONFIG.md  P3_COMPLETION_CHECKLIST.md  P3_IMPLEMENTATION_GUIDE.md  P3_INDEX.md  README.md  __init__.py  cli.py  config.py  drug_db.py  example_http_client.py  example_usage.py  exceptions.py  interactive.py  pytest.ini  requirements.txt  run_tests.py  test_deepseek_direct.py  test_deepseek_integration.py
agent_with_backend/: .env.example  .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  approval.py  conftest.py  init_db.py  main.py  quick_start.sh  requirements.txt
api/: admin_routes.py  dependencies.py  main.py  routes.py  schemas.py
backend/: README.md  app.py  approval.py  init_db.py  main.py  pharmacy.db
configs/: ros2.txt
docs/: QuickStart.md  (+7 more)
ros-todo/ros_workspace/src/task_msgs/: CMakeLists.txt
ros-todo/ros_workspace/src/task_msgs/msg/: CabinetOrder.msg  CabinetRunning.msg  MedicineData.msg  TaskState.msg
ros-todo/ros_workspace/src/task_msgs/pyScripts/: CustomUnitySubscriber.py  test_task_publisher.py
test/line_follower/: package.xml  setup.py
test/line_follower/line_follower/: line_follower_node.py
(+570 files in other folders)
